<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FriendConnect</string>
    <string name="act_registration_name">Registration</string>
    <string name="act_facebook_name">Facebook Login</string>
    <string name="act_activitylist_name">Activity List</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Wird geladen</string>
    
     <string name="error_internetcon">"Bitte überprüfe die Internetverbindung"</string>
    <string name="error_cardnumber">"Fehler - Kartennummer konnte nicht gefunden werden"</string>
    <string name="error_impress">"Fehler - Impressum konnte nicht geladen werden"</string>
    <string name="error_shopinfo">"Fehler - Shopinfo konnte nicht geladen werden"</string>
    <string name="error_loading_element">"Element konnte nicht geladen werden"</string>
    <string name="error_dialog_title">Problems on loading</string>
    <string name="error_dialog_nomember_message">"Please check your input"</string>
    <string name="error_agree_title">Acceptance field is missing</string>
    
      <!-- registration screen -->
    <string name="newsletter_activity_cardnumberhint">Add the last digits of your member number</string>
    <string name="newsletter_activity_cardnumberedittexthint">Member number</string>
    <string name="newsletter_activity_zustimmung">I accept that my data is used for FriendConnect..</string>
    <string name="newsletter_activity_orderbutton">Register</string>
    <string name="newsletter_activity_success_title">Registratino successful</string>
    <string name="becomemember_activity_gender_male">Mr</string>
    <string name="becomemember_activity_gender_female">Ms</string>
    <string name="becomemember_activity_gender">Gender</string>
    <string name="becomemember_activity_child_male">male</string>
    <string name="becomemember_activity_child_female">female</string>
    <string name="becomemember_activity_child_gender">Gender</string>
    <string name="becomemember_activity_firstname">name</string>
    <string name="becomemember_activity_lastname">surname</string>
    <string name="becomemember_activity_title">title</string>
    <string name="becomemember_activity_street">street</string>
    <string name="becomemember_activity_housenumber">number</string>
    <string name="becomemember_activity_zip">postcode</string>
    <string name="becomemember_activity_city">city</string>
    <string name="becomemember_activity_country">country</string>
    <string name="becomemember_activity_email">e-Mail-Adresse</string>
    <string name="becomemember_activity_birthdate">date of birth</string>
    <string name="becomemember_activity_landlinephone">Festnetztelefon</string>
    <string name="becomemember_activity_mobilephone">Mobiltelefon</string>
    
     <!-- Dialog Strings -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_yes">Ja, bitte</string>
    <string name="dialog_no">Nein, danke</string>
       <string name="error_agree_message_registration">I agree with the regisration</string>

    <!-- Facebook strings -->   
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="app_id">786629958058324</string>
    <string name="exception">Exception: %1$s</string>
       
</resources>
