<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".RegistrationActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/form_border_and_background"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/activity_newsletter_firstname"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ikea_edittext_background"
                android:ems="10"
                android:hint="@string/becomemember_activity_firstname" 
                android:inputType="textCapSentences">
            </EditText>

            <EditText
                android:id="@+id/activity_newsletter_lastname"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ikea_edittext_background"
                android:ems="10"
                android:hint="@string/becomemember_activity_lastname" 
                android:inputType="textCapSentences">
            </EditText>

            <EditText
                android:id="@+id/activity_newsletter_email"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/ikea_edittext_background"
                android:ems="10"
                android:hint="@string/becomemember_activity_email" >

            </EditText>
        </LinearLayout>

        <CheckBox
            android:id="@+id/activity_newsletter_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/newsletter_activity_zustimmung"
            android:textSize="14sp" />

        <Button
            android:id="@+id/activity_newsletter_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/newsletter_activity_orderbutton" />
    </LinearLayout>

</ScrollView>